* Fixed bug 1233, insufficient error handling with templates (Chris T)
* Added Product Receipt templates for printing vendor invoices (Chris T)
* (Bug Report 1229), added ID card and birthdate tracking (Chris T)
* Fixed bug 1234, trying to save user before employee thows error (Chris T)
* Fixed bug 1239, reopening on previous close throws error (Chris T)

Chris T is Chris Travers

Changelog for 1.4.3
* Added sanity check for psql availability (Bug 1226, Chris T)
* Added db fix for older eca's missing currencies (Bug 1228, Chris T)
* Fixed bug 1230, pricematrix for vendors not respected (Chris T)
* Updated installation instructions with more Apache info (Bill A)
* Improvements in testing LedgerSMB::Sysconfig (bug 1232, Chris T)
* Fixing sales tax rounding precision (bug via email, Chris T)
* Added Starman/Plack support (Chris T)
* Fixed duplicate user handling in setup.pl (Chris T)
* renamed 'Post as Saved' to 'Post', 'Save as Shown' to 'Save Draft' (Chris T)

Bill A is Bill Appelbe
Chris T is Chris Travers

Changelog for 1.4.2
* Separated address classes for employees out (bug 817, Chris T)
* Fixed dojo issue with user address screen (Chris T)
* Fixed bug 1219, log message of warning trial_balance/search.css (Chris T)
* Fixed issue with demo_with_images invoice.tex item description (Chris T)
* Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
* Fixed error unable to delete order (Chris T)
* Fixed bug 1223 prices 0 if selected from parts search (Chris T)
* Fixed issue, cannot log in after creating batch. (Chris T)
* Fixed bug 1224, account dropdowns on budget screen not working (Chris T)


Chris T is Chris Travers

Changelog for 1.4.1
* Fixed bug 1205, copy does not copy roles (Chris T)
* Added multi-date inventory uploads (Erik H)
* Fixed bug 1207, date format not displated on preferences (Chris T)
* Fixed bug 1208, username does not appear on menu block (Chris T)